--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
           </div>
           <label>
             <input type="checkbox" name="oferta" value="checkbox-yes">
-            Соглашаюсь с рассылкой и принимаю Условия договора
+            Соглашаюсь с рассылкой и принимаю <a href="">Условия договора</a>
           </label>
           <button type="submit button">Отправить</button>
 
