--- a/index.html
+++ b/index.html
@@ -427,22 +427,27 @@
 
     <!-- модальное окно -->
     <div class="backdrop is-hidden" data-modal>
-      <div class="modal">
+      <div class="modal" role="group">
         <form name="signup_form" autocomplete="on" novalidate>
           <h2>Оставьте свои данные, мы вам перезвоним</h2>
           <div>
-            <label>
-              Имя
-              <input type="text" name="username" placeholder="Jacob Mercer" autofocus />
-            </label>
-            <label>
-              Телефон
-              <input type="tel" name="phone" />
-            </label>
-            <label>
-              Email
-              <input type="email" name="email" />
-            </label>
+            <div class="form-field">
+              <label for="name">Имя</label>
+              <input type="text" name="name" id="name"/>              
+            </div>
+
+            <div class="form-field">
+              <label>Телефон
+                <input type="tel" name="phone" />
+              </label>
+            </div>
+
+            <div class="form-field">
+              <label>
+                Email
+                <input type="email" name="email" />
+              </label>
+            </div>
             <label>
               Коментарий
               <textarea name="comment" rows="5" placeholder="Ведите текст"></textarea>
@@ -458,7 +463,7 @@
         
         <button class="btn-close" data-modal-close>
           <svg width="11" height="11">
-            <use href="./images/sprite.svg#close-btn"></use>
+            <use href="./images/icons.svg#close-btn"></use>
           </svg>
         </button>
       </div>
