--- a/index.html
+++ b/index.html
@@ -422,6 +422,23 @@
             </li>
           </ul>
         </div>
+
+        <div class="footer-submit">
+          <form name="submit_form" autocomplete="off" novalidate>
+            <p class="footer-connect">Подпишитесь на рассылку</p>
+            <div class="footer-form-wrapper">       
+              <input class="footer-input" type="email" id="footer-email" placeholder="E-mail">
+              <div class="form-button">
+                <button type="submit button" class="button form-btn">Подписаться
+                  <svg width="24" height="24">
+                    <use href="./images/icons.svg#send-btn"></use>
+                  </svg>
+                </button>
+            </div>
+          </div>
+          </form>
+        </div>
+
       </div>
     </footer>
 
