--- a/portfolio.html
+++ b/portfolio.html
@@ -213,54 +213,77 @@
     <footer class="footer">
       <div class="container">
         <div>
-        <a href="./index.html" class="logo footer-logo"
-          >Web<span class="logo-footer">Studio</span></a>
-        <address>
-          <ul class="list site-contact-footer">
-            <li class="footer-item"><a href="" class="link">г. Киев, пр-т Леси Украинки, 26</a></li>
-            <li class="footer-item">
-              <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+          <a href="./index.html" class="logo footer-logo"
+            >Web<span class="logo-footer">Studio</span></a
+          >
+          <address>
+            <ul class="list site-contact-footer">
+              <li class="footer-item">
+                <a href="" class="link">г. Киев, пр-т Леси Украинки, 26</a>
+              </li>
+              <li class="footer-item">
+                <a href="mailto:info@devstudio.com" class="link"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="footer-item">
+                <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="footer-sosial">
+          <p class="footer-connect">Присоеденяйтесь</p>
+          <ul class="list sosial-list">
+            <li class="sosial-item">
+              <a href="" class="sosial-bgr">
+                <svg class="sosial-icon">
+                  <use href="./images/sprite.svg#instagram"></use>
+                </svg>
+              </a>
             </li>
-            <li class="footer-item">
-              <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+            <li class="sosial-item">
+              <a href="" class="sosial-bgr">
+                <svg class="sosial-icon">
+                  <use href="./images/sprite.svg#twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="sosial-item">
+              <a href="" class="sosial-bgr">
+                <svg class="sosial-icon">
+                  <use href="./images/sprite.svg#facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="sosial-item">
+              <a href="" class="sosial-bgr">
+                <svg class="sosial-icon">
+                  <use href="./images/sprite.svg#linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
-        </address>
-      </div>
-      <div class="footer-sosial">
-        <p class="footer-connect">Присоеденяйтесь</p> 
-        <ul class="list sosial-list">
-          <li class="sosial-item">
-            <a href="" class="sosial-bgr">
-              <svg class="sosial-icon">
-                <use href="./images/sprite.svg#instagram"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="sosial-item">   
-            <a href="" class="sosial-bgr">
-             <svg class="sosial-icon">
-              <use href="./images/sprite.svg#twitter"></use>
-             </svg>
-            </a>
-         </li>
-         <li class="sosial-item">
-          <a href="" class="sosial-bgr">   
-            <svg class="sosial-icon">
-              <use href="./images/sprite.svg#facebook"></use>
-            </svg>
-          </a>
-         </li>
-          <li class="sosial-item"> 
-            <a href="" class="sosial-bgr">  
-              <svg class="sosial-icon">
-                <use href="./images/sprite.svg#linkedin"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
-      </div>
+        </div>
+
+        <div class="footer-submit">
+          <form name="submit_form" autocomplete="off" novalidate>
+            <p class="footer-connect">Подпишитесь на рассылку</p>
+            <div class="footer-form-wrapper">       
+              <input class="footer-input" type="email" id="footer-email" placeholder="E-mail">
+            
+                <button type="submit" class="button form-btn">Подписаться
+                  <svg width="24" height="24">
+                    <use href="./images/icons.svg#send-btn"></use>
+                  </svg>
+                </button>
+            
+            </div>
+          </form>
+        </div>
+
       </div>
     </footer>
+
   </body>
 </html>
