--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
     <!-- модальное окно -->
     <div class="backdrop is-hidden" data-modal>
       <div class="modal" role="group">
-        <form name="signup_form" autocomplete="off" novalidate>
+        <form  autocomplete="off" novalidate>
           <p class="form-title">Оставьте свои данные, мы вам перезвоним</p>
           <div>
             <div class="form-field">
@@ -473,9 +473,9 @@
               <input type="checkbox" name="oferta" id="oferta" value="oferta">
               <label for="oferta">Соглашаюсь с рассылкой и принимаю <a href="">Условия договора</a></label>
           </div>
-          <div class="form-button">
+          <!-- <div class="form-button"> -->
             <button type="submit" class="button form-btn">Отправить</button>
-          </div> 
+          <!-- </div>  -->
 
         </form>
         
