--- a/index.html
+++ b/index.html
@@ -456,11 +456,17 @@
             <div class="form-field">
               <label for="tel">Телефон</label>
                 <input type="tel" name="tel" id="tel"/>              
+                <svg width="14" height="14" class="form-icon">
+                  <use href="./images/icons.svg#tel"></use>
+                </svg>
             </div>
 
             <div class="form-field">
               <label for="email">Email</label>
                 <input type="email" name="email" id="email"/> 
+                <svg width="16" height="12" class="form-icon">
+                  <use href="./images/icons.svg#mail"></use>
+                </svg>
             </div>
 
             <div class="form-field">
